# DelightfulOS

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
collar/: WIRING.md
collar/firmware/: contact_mic.ino
delightfulos/: __init__.py
delightfulos/ai/: __init__.py  config.py  context.py  gemini_live.py  mediator.py  models.py  prime.py  signal.py  transcribe.py
delightfulos/hdl/: __init__.py  codesign.py  grammar.py  loader.py
delightfulos/networking/: __init__.py  collar.py  glasses.py  simulator.py  supabase_rt.py
delightfulos/os/: __init__.py  bus.py  registry.py  state.py  types.py
delightfulos/runtime/: __init__.py  managers.py  output.py  policy.py
delightfulos/xr/: __init__.py  handler.py  protocol.py  session.py  types.py
delightfulos/xr/adapters/: __init__.py  spectacles.py
docs/: VISION.md  spectacles-protocol.json
scripts/: demo.sh  pi_collar.py  pi_mic.py  read_piezo.py  tunnel.sh
server/: .env.example  pyproject.toml  run.bat  run.sh
server/app/: main.py
server/app/routers/: ai.py  collar.py  hdl.py  system.py
server/static/: dashboard.html
server/tests/: test_context.py  test_os_pipeline.py  test_piezo_thresholds.py  test_prime_api.py  test_server.py  test_signal.py  test_stress.py
viz/: index.html  package.json  pnpm-lock.yaml  tsconfig.json
viz/src/: App.tsx  Scene.tsx  usePiezo.ts
