[project]
name = "delightful-server"
version = "0.3.0"
description = "FastAPI server for DelightfulOS"
requires-python = ">=3.12"
dependencies = [
    "delightfulos",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "openai>=1.60.0",
    "websockets>=14.0",
    "pydantic>=2.10.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
]
